--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.17.4",
-    "vue": "^3.5.14",
-    "vue-router": "^4.5.1",
+    "@nuxtjs/i18n": "^9.5.4",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia/nuxt": "^0.5.1",
     "@stripe/stripe-js": "^3.0.10",
     "axios": "^1.6.7",
-    "nuxt-icon": "^0.6.9"
+    "nuxt": "^3.17.4",
+    "nuxt-icon": "^0.6.9",
+    "vue": "^3.5.14",
+    "vue-router": "^4.5.1"
   }
 }
